--- a/index.html
+++ b/index.html
@@ -1245,17 +1245,7 @@
             color: #333;
             border: 1px solid #666
         }
-
-        #enntype-tabcontent::after {
-            position: absolute;
-            content: "";
-            left: 0;
-            bottom: 0;
-            height: 80%;
-            width: 100%;
-            background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fff)
-        }
-
+        
         .rcmd-qz {
             padding: 0 1em;
             text-align: center
@@ -2623,7 +2613,7 @@
         <div id=enntype-tabs><b data-tid=A><span class=tabtype>1</span></b><b data-tid=B><span class=tabtype>2</span></b><b data-tid=C><span class=tabtype>3</span></b><b data-tid=D><span class=tabtype>4</span></b><b data-tid=E><span class=tabtype>5</span></b><b data-tid=F><span class=tabtype>6</span></b>
             <b
                 data-tid=G><span class=tabtype>7</span></b><b data-tid=H><span class=tabtype>8</span></b><b data-tid=I><span class=tabtype>9</span></b></div>
-        <div id=enntype-tabcontent><button id=showfull>分享给朋友后，免费查看更多详细解析</button>
+        <div id=enntype-tabcontent><button id=showfull style=display:none;>分享给朋友后，免费查看更多详细解析</button>
             <div id=ennhtmlA>
                 <h2>1号人格 - 完美者，改进型</h2>
                 <h3>个性简述<b>“完美主义的捍卫者”</b></h3>
